# ChangeLog for app-misc/pax-utils
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/pax-utils/ChangeLog,v 1.30 2005/07/03 22:26:08 solar Exp $

*pax-utils-0.1.2 (03 Jul 2005)

  03 Jul 2005; <solar@gentoo.org> +pax-utils-0.1.2.ebuild:
  - update textrel handling code to scan only the text segment. New -e -v -p
  flags for pspax. minor changes overall

  16 Jun 2005; <solar@gentoo.org> pax-utils-0.1.1.ebuild:
  - arm/m68k/ppc64/s390/sh stable

  16 Jun 2005; <solar@gentoo.org> -pax-utils-0.0.4.ebuild,
  -pax-utils-0.0.7.ebuild, -pax-utils-0.1.0.ebuild, pax-utils-0.1.1.ebuild:
  - stable on alpha/hppa/ia64/sparc

*pax-utils-0.1.1 (16 Jun 2005)

  16 Jun 2005; <solar@gentoo.org> pax-utils-0.1.1.ebuild:
  - stable on x86/ppc/mips/amd64

  10 Jun 2005; <solar@gentoo.org> :
  - Bugfixes: only report the source of textrels when the executable actually
  contains DT_TEXTREL. Only enable -Wdeclaration-after-statement -Wextra if the
  compiler supports it

*pax-utils-0.1.0 (08 Jun 2005)

  08 Jun 2005; <solar@gentoo.org> -pax-utils-0.0.8.ebuild,
  -pax-utils-0.0.9.ebuild, +pax-utils-0.1.0.ebuild:
  * scanelf options: -N matches a given lib. -T will print the cause of 
  the ELF text relocation (-T based on code from Kevin Quinn.. 10x thanks) 
  -F format modifiers were added for printing the base file name and base 
  file name with search paths removed, this is ideal for scripting with 
  use of automated q/a systems so we don't have to re-parse a the string 
  to get desired output. All format modifiers now accept # in place of % 
  but # is quiet where % is verbose. Also new to the format handling is 
  the %x modifier now prints PT_PAX_FLAGS and falls back to EI_PAX if no 
  PaX flags were found in the program header.
  
  * The suite should work on OSX. 
  * Minor touch ups to Makefile/pspax/dumpelf.
  * Lots of typecasting fixes for improved portability.
